<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        tools:context="com.example.loginpage.StudentDashboardActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/studentProfileBtn"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:drawableEnd="@drawable/ic_baseline_art_track_24"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/studentDashboardScanBtn"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_below="@+id/studentProfileBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="#233FD8"
        android:drawableEnd="@drawable/ic_baseline_qr_code_scanner_24"
        android:text="@string/scan"
        android:textColor="@color/white"
        android:textSize="28sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rideHistoryBtn"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_below="@+id/studentDashboardScanBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="#08DA12"
        android:drawableEnd="@drawable/ic_baseline_format_list_bulleted_24"
        android:text="@string/ride_history"
        android:textColor="@color/white"
        android:textSize="23sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/info"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_below="@+id/rideHistoryBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="#DDA30F"
        android:drawableEnd="@drawable/ic_baseline_info_24"
        android:text="@string/about_the_app"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logOutBtn"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_below="@+id/info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="#DA042F"
        android:drawableEnd="@drawable/ic_baseline_power_settings_new_24"
        android:text="Logout"
        android:textColor="@color/white"
        android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>